# cloudflare-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
src/: config.rs  http.rs  lib.rs  main.rs  terminal.rs
src/api/endpoints/: account.rs  cache.rs  dns.rs  mod.rs  plan.rs  zones.rs
src/commands/: accounts.rs  cache.rs  config.rs  dns.rs  mod.rs  zones.rs
src/commands/accounts/: mod.rs
src/commands/dns/: mod.rs
src/commands/zones/: mod.rs
src/config/: mod.rs
